# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.193 2005/03/19 17:46:39 wolf31o2 Exp $

  19 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/ppc-archscript.sh:
  Added -l to mkisofs line for ppc as this allows full 31 character file names.

  16 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/yaboot-1.3.11-cdtar.tar.bz2, catalyst:
  Changing catalyst version to 1.1.8_pre1 and updating yaboot cdtar to allow
  for multiple initrd files.

  16 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/ppc-archscript.sh:
  Modifed PPC archscript to close bug #84648 and also to make the PPC
  archscript produce multiple initrd files, like x86/amd64.

  09 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.11-memtest86+-cdtar.tar.bz2,
  livecd/runscript/ppc-archscript.sh:
  Alright, so I lied to you. This is now the 1.1.7 release. I removed the 2.11
  isolinux cdtar tarballs and updated the ppc-archscript.sh to use the
  livecd/volid for the HFS volid, too.

  09 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Calling this one 1.1.7 and rolling a tarball.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/ppc-archscript.sh, livecd/runscript/sparc-archscript.sh,
  -livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh, modules/livecd_stage2_target.py:
  Added livecd/volid to set the volume ID when creating the ISO, patch by
  Gustavo Zacarias <gustavoz@gentoo.org>. Also copied sparc64-archscript.sh to
  sparc-archscript.sh and removing sparc64 one, as they are identical now.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,